<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rocket_kaya</name>
  <version>0.1.0</version>
  <description>Rocket Kaya Robot ROS2 remix of the Nvidia Kaya robot</description>
  <maintainer email="stephen@redrocketcomputing.com">Stephen Street</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rocket_kaya_description</depend>
  <depend>rocket_kaya_bringup</depend>
  <depend>rocket_kaya_base_controller</depend>
  <depend>rocket_kaya_base_hardware</depend>
  <depend>rocket_kaya_teleop</depend>
  <depend>rocket_kaya_vision</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
