<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rocket_kaya_controller</name>
  <version>0.2.0</version>
  <description>Rocket Kaya controls omniwheel controller</description>
  <maintainer email="stephen@redrocketcomputing.com">Stephen Street</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>
  <depend>Eigen3</depend>

  <build_depend>pluginlib</build_depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>controller_manager</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
